tests/spec/emit/snapshots/shift_defaults_and_display_interpolations_run_before_the_error_test.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  import "go:time"
  
  fn three(d: time.Duration, sh: int) -> Result<int, error> {
    let a = strconv.Atoi("1").wrap_err(f"took {d}")?
    let b = strconv.Atoi("2").unwrap_or(1 << sh)
    Ok(a + b)
  }
---
package main

import (
	"fmt"
	"strconv"
	"time"
)

func three(d time.Duration, sh int) (int, error) {
	a, err := strconv.Atoi("1")
	msg := fmt.Sprintf("took %v", d)
	if err != nil {
		return 0, fmt.Errorf("%s: %w", msg, err)
	}
	b, err_1 := strconv.Atoi("2")
	default_1 := int(1 << sh)
	if err_1 != nil {
		b = default_1
	}
	return a + b, nil
}
