tests/spec/emit/snapshots/simple_closure.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() {
    let add_one = |x: int| x + 1;
  }
---
package main

func test() {
	_ = func(x int) int {
		return x + 1
	}
}
