tests/spec/emit/snapshots/simple_function.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn foo() {
    let x = 42;
  }
---
package main

func foo() {}
