tests/spec/emit/snapshots/simple_struct_definition.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Point { x: int, y: int }\n"
---
package main

type Point struct {
	x int
	y int
}
