tests/spec/emit/snapshots/simple_type_alias.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type UserId = int
---
package main

type UserId = int
