tests/spec/emit/snapshots/single_field_tuple_struct_destructure.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Wrapper(int)
  
  fn test() -> int {
    let w = Wrapper(42);
    let Wrapper(val) = w;
    val
  }
---
package main

type Wrapper int

func test() int {
	w := Wrapper(42)
	val := int(w)
	return val
}
