tests/spec/emit/snapshots/single_variant_unit_enum.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Marker {
    Value,
  }
  
  fn test() -> Marker {
    Marker.Value
  }
---
package main

func MakeMarkerValue() Marker {
	return Marker{Tag: MarkerValue}
}

type MarkerTag uint8

const (
	MarkerValue MarkerTag = iota
)

type Marker struct {
	Tag MarkerTag
}

func test() Marker {
	return MakeMarkerValue()
}
