tests/spec/emit/snapshots/slice_append.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.append(1, 2, 3)
  }
---
package main

func test(s []int) []int {
	return append(s, 1, 2, 3)
}
