tests/spec/emit/snapshots/slice_append_no_args.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.append()
  }
---
package main

func test(s []int) []int {
	return s
}
