tests/spec/emit/snapshots/slice_append_no_args_into_var.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>, flag: bool) -> Slice<int> {
    let out = if flag { s.append() } else { s }
    out
  }
---
package main

func test(s []int, flag bool) []int {
	var out []int
	if flag {
		out = s
	} else {
		out = s
	}
	return out
}
